# picoSynth

./: CMakeLists.txt  README.md  _config.yml  index.md
Source/: CMakeLists.txt  Synth.h  SynthRack.h  SynthVoice.h  dinkySynth.cpp  picoSynth.cpp
Source/Acorn/: CMakeLists.txt
Source/Acorn/Proton/: CMakeLists.txt  Effect.h  Patch.h  Synth.h  Tone.h  Voice.h
Source/Casio/: CMakeLists.txt
Source/Casio/VL1/: CMakeLists.txt  Control.h  Effect.h  Patch.cpp  Synth.h  Voice.h
Source/Experiment/: CMakeLists.txt
Source/Experiment/Additive/: CMakeLists.txt  Patch.h  Synth.h  Voice.h
Source/Experiment/PhysM/: Patch.h
Source/Experiment/Simple/: Patch.h  Synth.h  Voice.h
Source/Generic/: CMakeLists.txt
Source/Generic/PhysM/: CMakeLists.txt  Synth.h  Voice.h
Source/Generic/Simple/: CMakeLists.txt  Synth.h  Voice.h
Source/Roland/: CMakeLists.txt  index.md
Source/Roland/Juno-106/: CMakeLists.txt  Control.h  Effect.h  Fred.py  Patch.h  Synth.h  SysEx.cpp  SysEx.h  Table_freq7.py  Table_juno106_patches.py  Voice.h  index.md
Source/Roland/SH-101/: CMakeLists.txt  Control.h  Patch.cpp  Patch.h  Synth.h  Voice.h
Source/Roland/TB-303/: CMakeLists.txt  Control.h  Patch.cpp  Patch.h  Synth.h  Voice.h
Source/SIG/: Adsr.h  BiQuadFilter.h  CMakeLists.txt  Delay.h  Gain.h  OscBase.h  PosPwmOsc.h  PulseOsc.h  PwmOsc.h  RampOsc.h  SIG.h  Sample.h  SineOsc.h  TriOsc.h  Types.h
Source/SIG/Env/: Adsr.h  LfoEnv.h
Source/SIG/Filter/: BiQuad.h  FBComb.h  FFComb.h  FirstOrder.h
Source/SIG/Osc/: Base.h  Noise.h  Pulse.h  Pwm.h  Ramp.h  Sine.h  Square.h  Triangle.h
Source/SIG/test/: testOsc.cpp
Source/Synth/: CMakeLists.txt  Control.h  MidiController.cpp  MidiController.h  MidiMap.h  NoEffect.h  NoteButton.h  PatchRef.h  Synth.h  SynthVoice.h  SynthVoiceSysEx.h
Source/inst/: CMakeLists.txt  Control.h  NoteButton.h  Synth.h  SynthRack.h  SynthVoice.h
Source/inst/AcornProton/: Synth.h
Source/inst/Casio/VL1/: Voice.h
Source/inst/Juno106/: CMakeLists.txt  Effect.h  Patch.cpp  Program.cpp  Program.h  Synth.h  SysEx.cpp  Table_amp7.py  Table_gain7.py  Voice.h
Source/inst/PhysM/: Synth.h
Source/inst/Roland/SH-101/: Control.h  Patch.cpp  Patch.h  Synth.h  Voice.h
Source/inst/Roland/TB-303/: Voice.h
Source/inst/Simple/: Effect.h  Synth.h  Voice.h
Source/inst/Synth/: Control.h  MidiController.h  Synth.h
Source/inst/TB-303/: CMakeLists.txt  Effect.h  Patch.h  Synth.h  Voice.h
Source/inst/VL1/: CMakeLists.txt  Control.h  Effect.h  Patch.h  Program.cpp  Program.h  Synth.h  Voice.h
